erDiagram
  CATEGORY ||--o{ RESOURCE : groups
  RESOURCE }o--o{ SCENARIO : appears_in
  RESOURCE }o--o{ MODEL_REF : links

  CATEGORY {
    string id PK
    string slug
    localized name
    localized blurb
    int order
  }

  RESOURCE {
    string id PK
    string slug
    string name
    string url
    string kind
    string categoryId FK
    string pricing
    stringArray platforms
    localized verdict
    localized summary
    boolean featured
    string status
  }

  SCENARIO {
    string id PK
    localized title
    localized summary
    localized outcome
    stringArray resourceSlugs
    int order
  }

  MODEL_REF {
    string modelId PK
    string externalRankingUrl
  }
